<resources>
    <string name="app_name">AndroidApp</string>
    <string name="greet_login">MEMBER LOGIN</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="btLogin">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_account">Create account</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="member_sign_up">MEMBER SIGN UP</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="name">Complex Cat</string>
    <string name="title_find">Find words</string>
    <string name="review_words">REVIEW WORDS</string>
    <string name="leader_board">LEADER BOARD</string>
    <string name="complex_cat">Complex Cat</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="_0367673199">0367673199</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="day_of_birth">Day Of Birth</string>
    <string name="birthday">11-03-2003</string>
    <string name="done">DONE</string>
    <string name="setting">Setting</string>
    <string name="account_setting">Account Setting</string>
    <string name="dark_mode">Dark mode</string>
    <string name="get_started">GET STARTED</string>
    <string name="library">Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_sets">Find sets</string>
    <string name="beginner">Beginner</string>
    <string name="seasons">Seasons</string>
    <string name="_30_45_words">30/45 words</string>
    <string name="completed">Completed</string>
    <string name="home">Home</string>
    <string name="communication">Communication</string>
    <string name="popular_topics">POPULAR TOPICS</string>
    <string name="add_to_library">Add to library</string>
    <string name="you_ve_learned">YOU’VE LEARNED</string>
    <string name="from_topics">FROM TOPICS</string>
    <string name="_360_words">360 WORDS</string>
    <string name="flex_your_score_to_your_friends">FLEX YOUR SCORE TO YOUR FRIENDS</string>
    <string name="forgot_your_account">FORGOT YOUR ACCOUNT?</string>
    <string name="don_t_worry_enter_your_email_and_we_will_send_you_a_reset">Don\'t worry! Enter your email and we will send you a reset</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="please_enter_4_digit_code_that_you_received_on_your_email">Please enter 4 digit code that you received on your email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="topic">TOPIC</string>
    <string name="folder">FOLDER</string>
    <string name="create_new">CREATE NEW</string>
    <string name="name_hint">Name</string>
    <string name="description">Description</string>
    <string name="enter">Enter</string>
    <string name="name_of_the_set">Name of the set</string>
    <string name="word">WORD</string>
    <string name="word_class">WORD CLASS</string>
    <string name="meaning">MEANING</string>
    <string name="publish_settings">PUBLISH SETTINGS</string>
    <string name="public_topic">Public</string>
    <string name="publish">PUBLISH</string>
    <string name="img">img</string>
    <string name="practice">PRACTICE</string>
    <string name="welcome_please_pick_a_way_to_practice_yourself">Welcome! Please pick a way to practice yourself</string>
    <string name="flashcard">FLASHCARD</string>
    <string name="learn_new_words_from_sets_of_flashcard_that_have_a_various_range_of_topic">Learn new words from sets of flashcard that have a various range of topic</string>
    <string name="multiple_choices">MULTIPLE-CHOICES</string>
    <string name="slogan_multiplechoices">A test that require you to choose correct answers. It helps you to remember learned words</string>
    <string name="reverse_translate">REVERSE TRANSLATE</string>
    <string name="slogan_practice_reverse">An advanced test that require you to write down the word that match a given meaning.</string>
    <string name="_01_45">01/45</string>
    <string name="kitchen">Fruit</string>
    <string name="spoon">SPOON</string>
    <string name="noun">(Noun)</string>
    <string name="flip_card">FLIP CARD</string>
    <string name="answer1">A. Cái muỗng</string>
    <string name="answer">ANSWER</string>
    <string name="_45_45">45/45</string>
    <string name="true_answers">TRUE ANSWERS</string>
    <string name="complete">COMPLETE</string>
    <string name="previous_card">PREVIOUS CARD</string>
    <string name="translation">TRANSLATION</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="abalone">Abalone</string>
    <string name="b_o_ng">Bào ngư</string>
    <string name="ocean">OCEAN</string>
    <string name="info">Info</string>
    <string name="words">Words</string>

</resources>