<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Guideline cho phần trên (30% của màn hình) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <!--ACCOUNT SETTING-->
    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_header_profile"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/iv_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/radius_topright_topleft_30"
        app:layout_constraintTop_toBottomOf="@id/iv_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--USER NAME-->
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-5dp"
        android:hint="@string/complex_cat"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"/>

    <!--EMAIL-->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        />

    <EditText
        android:id="@+id/et_email"
        android:enabled="false"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-5dp"
        android:textColorHint="@color/black"
        android:hint="@string/complex_cat"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/tv_email"/>

    <!--PHONE NUMBER-->
    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-5dp"
        android:hint="@string/_0367673199"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        app:layout_constraintStart_toStartOf="@id/tv_phone"/>

    <!--Gender-->
    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-5dp"
        android:textColorHint="@color/black"
        android:hint="@string/female"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="@id/tv_gender"/>

    <!--Gender-->
    <TextView
        android:id="@+id/tv_birth"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/day_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_gender"
        />

    <EditText
        android:id="@+id/et_birth"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-15dp"
        android:textColorHint="@color/black"
        android:hint="@string/birthday"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_birth"
        app:layout_constraintStart_toStartOf="@id/tv_birth"/>

    <!--IMG AVT AND BUTTON-->
    <ImageView
        android:id="@+id/iv_avt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-90dp"
        android:src="@drawable/avt_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_top" />

    <Button
        android:id="@+id/btDone"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/done"
        android:textColor="@color/dark_white"
        android:background="@drawable/border"
        android:backgroundTint="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>