<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/itemAddTopic"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_word"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/word"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/et_wordClass"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:hint="@string/word_class"
            android:textStyle="normal"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/et_meaning"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="@string/meaning"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>