<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Add.AddFolderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/radius_20"
        android:backgroundTint="@color/backgroundBlue"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotationY="180"
            android:layout_marginTop="20dp"
            android:src="@drawable/edit_logo_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_addFolder"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_new"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:hint="@string/name_hint"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_addFolder"/>

        <EditText
            android:id="@+id/et_des"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:hint="@string/description"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <TextView
            android:id="@+id/bt_enter"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:backgroundTint="@color/darkBlue"
            android:background="@drawable/radius_10"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/et_des"
            app:layout_constraintTop_toBottomOf="@+id/et_des" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>