<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    tools:context=".View.intro.login">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="165dp"
        android:layout_height="156dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logobig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/greetLogin"
        android:layout_width="128dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/greet_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <EditText
        android:id="@+id/etUserLogin"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_edittext_login"
        android:backgroundTint="#6BFFFFFF"
        android:textSize="16sp"
        android:hint="@string/user"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/greetLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></EditText>

    <EditText
        android:id="@+id/etPassLogin"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_edittext_login"
        android:backgroundTint="#6BFFFFFF"
        android:textSize="16sp"
        android:hint="@string/pass"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etUserLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></EditText>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="238.21dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/btLogin"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/etPassLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        />

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="63dp"
        android:hint="@string/remember_me"
        android:buttonTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btLogin"/>


    <TextView
        android:id="@+id/tv_forgotPass"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/etPassLogin"
        app:layout_constraintBottom_toBottomOf="@id/cbRemember"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <View
        android:id="@+id/lineStartLogin1"
        android:layout_width="117dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/etPassLogin"
        app:layout_constraintTop_toBottomOf="@id/cbRemember"
        ></View>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:text="or"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/lineStartLogin1"
        app:layout_constraintBottom_toBottomOf="@id/lineStartLogin1"
        app:layout_constraintTop_toTopOf="@id/lineStartLogin1"
        />
        />
    <View
        android:id="@+id/lineStartLogin2"
        android:layout_width="117dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/etPassLogin"
        app:layout_constraintTop_toBottomOf="@id/cbRemember"
        ></View>

    <LinearLayout
        android:id="@+id/ll_groupLogin"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/lineStartLogin1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageButton
            android:id="@+id/imFb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/logo_fb"
            android:background="@drawable/border"
            />

        <ImageButton
            android:id="@+id/imGmail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo_gmail"
            android:background="@drawable/border"
            />

        <ImageButton
            android:id="@+id/imIn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/logo_in"
            android:background="@drawable/border"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_NotMember"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginBottom="50dp"
        android:text="@string/not_a_member"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:background="@drawable/radius_10"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/create_account"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_NotMember" />
</androidx.constraintlayout.widget.ConstraintLayout>
